# KnowledgeRetriever

./: .env_example  README.md  pyproject.toml  requirements.txt
KnowledgeRetriever/: __init__.py  __main__.py  errors.py  server.py  settings.py
KnowledgeRetriever/core/: KG.py  chat_test.py  dataProcess.py  knowledgeGraphExtractor.py  knowledge_retriever.py
KnowledgeRetriever/core/data/: results.json  《煤矿重大事故隐患判定标准》  历史数据样例.csv  历史隐患数据样本.xlsx
KnowledgeRetriever/core/faiss/Standard/: index.faiss  index.pkl
KnowledgeRetriever/core/faiss/Standard_kw/: index.pkl
KnowledgeRetriever/core/prompt/: entity_extraction.txt  judge.txt  kw_extraction.txt  kw_extraction2.txt  kw_judge.txt  lawdocgen_prompt.txt  relationship_extraction.txt
KnowledgeRetriever/handlers/: __init__.py  dataplane.py
KnowledgeRetriever/rest/: app.py  endpoints.py  errors.py  logging.py  server.py
KnowledgeRetriever/schemas/: __init__.py  input_schemas.py  output_schemas.py
KnowledgeRetriever/utils/: __init__.py  getaltsep.py  logging.py
test/: knowledge_retriever_test.py  test.py  test_connect.py
