[tool.poetry]
name = "document_generation"
version = "0.0.1"
description = "Document generation project"
authors = ["dg-team"]
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple/"
priority = "default"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[[tool.poetry.source]]
name = "pypi"
priority = "supplemental"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
uvicorn = { version = "^0.19.0", extras = ["standard"] }
fastapi = "^0.95.0"
orjson = "^3.8.0"
python-docx = "^1.1.0"
langchain = "^0.1.3"
clickhouse-sqlalchemy="^0.3.0"
odmantic="^0.9.2"
aioredis="^2.0.1"
minio="^7.2.0"
langchain-community = "^0.0.15"
langchain-openai = "^0.0.3"
python-multipart = "^0.0.6"

[tool.poetry-version-plugin]
source = "file"
file_path = "../VERSION"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"